--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -54,7 +54,6 @@
 }
 
 .heroOverlay {
-    animation: fadeIn 0.8s ease-out;
 }
 
 /* GOLD ACCENTS (non-interactive, tasteful) */
